--- a/style.css
+++ b/style.css
@@ -300,16 +300,17 @@ nav {
 }
 
 .my-tool-logo {
-    font-size: 7em;
+    font-size: 4em;
     display: block;
     text-align: center;
 }
 
 .my-tool-name {
     font-family: 'Dosis', sans-serif;
-    font-size: 2em;
+    font-size: 1.5em;
     text-align: center;
-    margin-top: 5px;
+    color: #000000;
+    margin: 0px;
 }
 
 
